[tool.poetry]
name = "ncku-feed-backend"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.2"
python-dotenv = "1.0.0"
pymongo = "^4.5.0"
pydantic = "1.10.9"
pandas = "2.0.1"
scikit-learn = "1.3.0"
flask-jwt-extended = "4.5.2"
flask-cors = "4.0.0"
flask-restful = "0.3.10"
redis = "4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
